ex021 parte 3